syntax = "proto3";

option csharp_namespace = "ElearnGrpc";

message Pagination {
  int32 pageNumber = 1;
  int32 pageSize = 2;
}